[project]
name = "claimwatch"
version = "1.0.0"
description = "Payer-side insurance claims triage RL environment"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "websockets",
    "pydantic>=2.0",
    "gradio>=4.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
