[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimwatch"
version = "1.0.0"
description = "OpenEnv RL environment simulating insurance claims triage."
readme = "README.md"
requires-python = ">=3.10"
authors = [ { name = "OpenEnvHackathon" } ]

dependencies = [
  "starlette==0.40.0",
  "fastapi==0.115.2",
  "uvicorn==0.35",
  "pydantic==2.11.7",
  "openai>=1.40.0",
  "openenv-core==0.2.3",
  "requests==2.32.3",
  "PyYAML==6.0.1",
  "python-dotenv>=1.0.0",
  "numpy==1.26.4",
  "websocket-client>=1.7.0",
]

[project.urls]
"Homepage" = "https://github.com/your-org/claimwatch"
"Repository" = "https://github.com/your-org/claimwatch"

[project.scripts]
server = "server.app:main"
